# adk-python

./: .gitignore  CONTRIBUTING-rust.md  Cargo.toml  MIGRATION_STATUS.md  README-rust.md  README.md
examples/: llm_integration.rs  simple_agent.rs  web_server.rs
src/: error.rs  lib.rs  main.rs  runners.rs  types.rs
src/agents/: base_agent.rs  invocation_context.rs  llm_agent.rs  loop_agent.rs  mod.rs  parallel_agent.rs  run_config.rs  sequential_agent.rs
src/artifacts/: mod.rs
src/cli/: commands.rs  mod.rs
src/evaluation/: mod.rs
src/events/: event.rs  mod.rs
src/google/adk/: __init__.py
src/google/adk/agents/: __init__.py
src/google/adk/models/: __init__.py
src/google/adk/tools/: __init__.py
src/memory/: mod.rs
src/models/: base_llm.rs  google_llm.rs  llm_request.rs  llm_response.rs  mod.rs  registry.rs
src/sessions/: mod.rs  session.rs  session_service.rs
src/tools/: base_tool.rs  function_tool.rs  google_search_tool.rs  mod.rs
src/utils/: mod.rs
src/web/: handlers.rs  mod.rs  server.rs  websocket.rs
src/web/middleware/: logging.rs  mod.rs  request_id.rs
