[package]
name = "google-adk"
version = "0.1.0"
edition = "2021"
description = "Agent Development Kit - Rust implementation"
license = "Apache-2.0"
authors = ["Google LLC <googleapis-packages@google.com>"]
repository = "https://github.com/babybirdprd/adk-rust"
homepage = "https://google.github.io/adk-docs/"
documentation = "https://google.github.io/adk-docs/"
readme = "README.md"
keywords = ["ai", "agents", "llm", "google", "gemini"]
categories = ["api-bindings", "web-programming", "command-line-utilities"]

[[bin]]
name = "adk"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# Web framework
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-jaeger = "0.20"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.0"
mime = "0.3"
bytes = "1.0"
base64 = "0.21"

# Async utilities
async-trait = "0.1"
async-stream = "0.3"

# Configuration
config = "0.13"
dotenv = "0.15"

# Template engine
handlebars = "4.0"

# Lazy static initialization
once_cell = "1.0"

# Google Cloud APIs (commented out for now - will be implemented later)
# google-cloud-storage = "0.15"
# google-cloud-auth = "0.13"

# AI/ML (commented out for now - will be implemented later)
# google-ai = { version = "0.4", optional = true }

# Optional dependencies for specific features
# anthropic = { version = "0.0.8", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
wiremock = "0.5"

[features]
default = []
# google-ai = ["dep:google-ai"]
# anthropic = ["dep:anthropic"]
# all = ["google-ai", "anthropic"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
